# tape-sorter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang_format.yml  tests.yml
cmake/: LibraryBuild.cmake  TestTarget.cmake
demos/console/: CMakeLists.txt  main.cpp
include/tape_sorter/: file_tape.h  tape_interface.h
include/tape_sorter/delay_config/: tape_delay_config.h  tape_delay_config_parser.h
include/tape_sorter/sort/: tape_sorter.h  temp_file_tape_creator.h  temp_tape_creator.h  temp_tape_creator_interface.h
src/tape_sorter/: file_tape.cpp
src/tape_sorter/delay_config/: tape_delay_config_parser.cpp
src/tape_sorter/sort/: tape_sorter.cpp  tapes_priority_queue.h  temp_file_tape_creator.cpp
tests/: CMakeLists.txt  test_delay_config_parser.cpp  test_file_tape.cpp  test_tape_sort.cpp
